# demodata

./: README.md
cicd/pipelines/extraction/: build.yml  (+3 more)
infra-modules-1/: CHANGELOG.md  README.md  pyproject.toml  terraform-docs.yml
infra-modules-1/cicd/: check_for_file_endings.sh  pull-request.azure-pipelines.yml  release.azure-pipeline.yml
infra-modules-1/cicd/config_schema_validator/: README.md  dict_utils.py  main.py  product_configurations.py  product_schema.py  terragrunt_file.py
infra-modules-1/terraform/modules/deloitte_storage/: README.md  main.tf  variables.tf
infra-modules-1/terraform/modules/sap_datasphere_storage/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra-modules-1/terraform/products/: readme.md
infra-modules-1/terraform/products/deloitte/: configuration_schema.yaml
infra-modules-1/terraform/products/domain/: configuration_schema.yaml  terragrunt.hcl
infra-modules-1/terraform/products/meta/: README.md  configuration_schema.yaml  environment.yaml  terragrunt.hcl
infra-modules-1/utils/: Assign-Subscriptions-Roles.ps1  Check-Installed-JRE-Version.ps1  Generate_Databricks_Lemongrass_Info.ps1  Generate_Hana-Databricks_Tokens.ps1  Replace-CSA-with-CPA.ps1  Set-Cluster_Load-Permissions.ps1  Set-UserPath.ps1  clear-terragrunt-cache.py  fix_lf_crlf.sh  release_blob_lease.ps1  select_env_domain_variables_files.ps1  terraform-docs.ps1  terraform-docs.sh  terraform-format.ps1  test-start-cluster-using-sp-token.ps1
infra-modules-1/utils/merge_tfstates/: config.yaml  merge-tfstate-files.ps1  merge-tfstate-files.py  pyproject.toml
(+330 files in other folders)
