[tool.poetry]
name = "merge-tfstates"
version = "0.1.0"
description = ""
authors = ["Josko <josko.de.boer@nn.nl>"]
readme = "README.md"
packages = [{include = "merge_tfstates"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
